feat: html template completed

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,30 @@
 <body>
   <h1>8. Домашнее задание к лекции «EventSource, WebSockets»</h1>
   <h2>8.1 Онлайн репортаж <span>(in progress)</span></h2>
-  <div class="container"></div>
+  <div class="container">
+    <div data-widget="online-report" class="online-report">
+      <ul data-id="events-list" class="events-list">
+        <li class="events-list__item">
+          <span class="event__time">18:50:01 24.01.2021</span>
+          <span class="event__description">Игра началась</span>
+        </li>
+
+        <li class="events-list__item event">
+          <span class="event__time">18:50:31 24.01.2021</span>
+          <span class="event__description">Идет перемещение мяча по полю, игроки и той, и другой команды активно пытаются атаковать</span>
+        </li>
+
+        <li class="events-list__item">
+          <span class="event__time">18:51:01 24.01.2021</span>
+          <span class="event__description event__description_action_freekick">Нарушение правил, будет штрафной удар</span>
+        </li>
+
+        <li class="events-list__item">
+          <span class="event__time">18:51:01 24.01.2021</span>
+          <span class="event__description event__description_action_goal">Отличный удар! И Г-О-О-О-Л!</span>
+        </li>
+      </ul>
+    </div>
+  </div>
 </body>
 </html>
