feat: initial version

--- a/src/html/online-report.html
+++ b/src/html/online-report.html
@@ -1,23 +1,6 @@
 <div data-widget="online-report" class="online-report">
-  <ul data-id="events-list" class="events-list">
-    <li class="events-list__item">
-      <span class="event__time">18:50:01 24.01.2021</span>
-      <span class="event__description">Игра началась</span>
-    </li>
-
-    <li class="events-list__item event">
-      <span class="event__time">18:50:31 24.01.2021</span>
-      <span class="event__description">Идет перемещение мяча по полю, игроки и той, и другой команды активно пытаются атаковать</span>
-    </li>
-
-    <li class="events-list__item">
-      <span class="event__time">18:51:01 24.01.2021</span>
-      <span class="event__description event__description_action_freekick">Нарушение правил, будет штрафной удар</span>
-    </li>
-
-    <li class="events-list__item">
-      <span class="event__time">18:51:01 24.01.2021</span>
-      <span class="event__description event__description_action_goal">Отличный удар! И Г-О-О-О-Л!</span>
-    </li>
-  </ul>
+  <nav>
+    <button data-id="restart">Restart game</button>
+  </nav>
+  <ul data-id="events-list" class="events-list"></ul>
 </div>
