feat: task completed

--- a/src/html/online-report.html
+++ b/src/html/online-report.html
@@ -1,6 +1,8 @@
 <div data-widget="online-report" class="online-report">
-  <nav>
-    <button data-id="restart">Restart game</button>
+  <nav class="online-report__menu">
+    <button data-id="btn-restart" class="btn-restart">Restart the game</button>
   </nav>
-  <ul data-id="events-list" class="events-list"></ul>
+  <div class="online-report__content">
+    <ul data-id="events-list" class="events-list"></ul>
+  </div>
 </div>
